--- a/public/stylesheets/css/custom.css
+++ b/public/stylesheets/css/custom.css
@@ -227,3 +227,14 @@ table.table-custom {
 .product-act {
     margin-top: 50px;
 }
+.pdv-detail {
+    width: 75px;
+    margin-left: 5px;
+}
+input[type='number'] {
+    -moz-appearance: textfield;
+  }
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
