--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -179,6 +179,11 @@
                 </div>
             </nav>
         </div>
+        <%
+             VND = function(num) {
+                return num.toLocaleString('it-IT', {style : 'currency', currency : 'VND'});
+            }
+        %>
     </header>  
     <script>
         if ($('#auser').length > 0) {
