--- a/views/auth/user/user-order.ejs
+++ b/views/auth/user/user-order.ejs
@@ -76,9 +76,9 @@
                             </div>
                         </div>
                     </td>
-                    <td><%-VND(item.price)%> đ</td>
+                    <td><%-VND(item.price)%></td>
                     <td><%-item.amount%></td>
-                    <td><%-VND(item.price * item.amount)%> đ</td>
+                    <td><%-VND(item.price * item.amount)%></td>
                     <%total += item.price * item.amount;%>
                 </tr>
                 <%})%>
